--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome</h1>
-<P>Want some encouraging Bible verses?  Just select your topic below.</P>
+<P>Want some encouraging Bible verses?  Just select your topic below.</p>
 
 <div class="aff-drop">
   <%= form_tag("/verses/show", method: "get") do %>
