--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,5 +1,3 @@
-@import '../node_modules/rfs/scss';
-
 //===============================
 //    COLORS
 //
@@ -33,18 +31,9 @@ $control-border-color: $wine;
 //    TYPOGRAPHY
 //
 
-$rfs-base-value: 1.5rem;
-
 $font-stack: Georgia, Utopia, Times, "Times New Roman", serif;
 $font-stack-alt: ‘Frutiger Linotype’, Univers, Calibri, ‘Gill Sans’, ‘Myriad Pro’, Myriad, ‘DejaVu Sans Condensed’, ‘Liberation Sans’, ‘Nimbus Sans L’, Tahoma, Geneva, ‘Helvetica Neue’, Helvetica, Arial, sans-serif;
-$font-size: 1.5rem;
-$line-height: 2.3em;
-
-$h1: 1.6rem;
-$h2: 1.5rem;
-$h3: 1.4rem;
-$h4: 1.3rem;
-$h5: 1.2rem;
+$line-height: 1.5em;
 
 
 //===============================
@@ -55,12 +44,43 @@ $h5: 1.2rem;
 // border
 
 $border-rad: 3px;
-$border-thick: 1px;
-$arrow-size: 6px;
 
 //================================
 //    OTHER VARIABLES
 
 $trans-time: .3s;
+
+//================================
+//    RESPONSIVE
+
+$font-size: 16px;
+$font-size-small: 20px;
+$font-size-medium: 22px;
+$font-size-large: $font-size;
+
+// Pixel guidelines
+// MAX-WIDTH
+//    Desktop: 991px
+//    Medium tablets: 767px
+//    Phones: 479px
+
+
+
+$breakpoints: (
+  sm: 320px,
+  md: 768px,
+  lg: 1024px,
+);
+
+@mixin break($size){
+  @media (min-width: map-get($breakpoints, $size)) {
+    @content;
+  }
+}
+
+
+
+
+
 
 
